fixed alignment of inout box for first name last name

--- a/style.css
+++ b/style.css
@@ -227,3 +227,13 @@ body {
     color: white;
 
 }
+
+.name{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.po{
+    padding-right: 20px;
+    justify-content: space-evenly;
+}
